gfx/thebes/public/gfxPlatformMac.h
@@ -80,14 +80,21 @@ public:
     // Ex: Mac OS X 10.4.x ==> 0x104x 
     PRInt32 OSXVersion();
 
+    // lower threshold on font anti-aliasing
+    PRUint32 GetAntiAliasingThreshold() { return mFontAntiAliasingThreshold; }
+    
 private:
     void gfxPlatformMac::AppendCJKPrefLangs(eFontPrefLang aPrefLangs[], PRUint32 &aLen, 
                                             eFontPrefLang aCharLang, eFontPrefLang aPageLang);
                                                
     virtual cmsHPROFILE GetPlatformCMSOutputProfile();
     
+    // read in the pref value for the lower threshold on font anti-aliasing
+    static PRUint32 ReadAntiAliasingThreshold();    
+    
     nsTArray<PRUint32> mCJKPrefLangs;
     PRInt32 mOSXVersion;
+    PRUint32 mFontAntiAliasingThreshold;
 };
 
 #endif /* GFX_PLATFORM_MAC_H */
